# traffic_rl

./: .gitignore  Dockerfile  README.md  agent.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  simulation.py  start.sh  test.py  train.py
docs/: api.md  architecture.md  design_decisions.md  environment.md  limitations.md  reward.md  setup.md  tasks.md
server/: app.py
traffic_env/: client.py  models.py  tasks.py
traffic_env/server/: app.py  environment.py
